--- a/comps/Header/header.css
+++ b/comps/Header/header.css
@@ -1,6 +1,6 @@
 .header_box {
-    text-align: center;
-    background-color: pink;
+    /* text-align: center; */
+    /* background-color: pink; */
     padding: 5px;
     margin: 5px;
 }
