--- a/pages/app.css
+++ b/pages/app.css
@@ -1,11 +1,3 @@
-#mainapp {
-    opacity: 1;
-    position: relative;
-    left: 0;
-    transition: opacity 1s, left 1s;
-}
-
-#mainapp button {
-    height: 25px;
-    width: auto;
+* {
+    font-family: "Raleway", sans-serif;
 }
